--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -7,7 +7,9 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
+        <h1>This is Header!</h1>
         {% block body %}{% endblock %}
+        <h1>This is Footer!</h1>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
